// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`component snapshots > Dialog primitive — open, non-dismissable 1`] = `
<div
  class="fixed inset-0 bg-black/60 flex items-center justify-center z-50"
>
  <div
    aria-labelledby="snap-d-title"
    aria-modal="true"
    class="bg-gradient-to-b from-amber-100 to-amber-50 border-2 border-amber-700 rounded-lg p-5 max-w-lg w-full m-4 shadow-2xl focus:outline-none"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between mb-3"
    >
      <h2
        class="text-2xl font-bold"
        id="snap-d-title"
      >
        Confirm
      </h2>
    </div>
    <p>
      Body text.
    </p>
  </div>
</div>
`;

exports[`component snapshots > HelpModal 1`] = `
<div
  class="fixed inset-0 bg-black/60 flex items-center justify-center z-50"
>
  <div
    aria-labelledby="help-title"
    aria-modal="true"
    class="bg-gradient-to-b from-amber-100 to-amber-50 border-2 border-amber-700 rounded-lg p-5 max-w-lg w-full m-4 shadow-2xl focus:outline-none"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between mb-3"
    >
      <h2
        class="text-2xl font-bold"
        id="help-title"
      >
        How to Play
      </h2>
      <button
        aria-label="Close dialog"
        class="text-stone-600 hover:text-stone-900 focus:outline-none focus-visible:ring-2 focus-visible:ring-amber-600 focus-visible:ring-offset-1 rounded p-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="text-sm space-y-2 text-stone-800"
    >
      <p>
        <b>
          Goal:
        </b>
         Be the last faction with a city standing.
      </p>
      <p>
        <b>
          Move:
        </b>
         Click or keyboard-select a unit, then click/press Enter on a blue tile to move there.
      </p>
      <p>
        <b>
          Attack:
        </b>
         Select a red-outlined enemy in range. Melee units counter-attack.
      </p>
      <p>
        <b>
          Cards:
        </b>
         Spend Orders (refill each turn) on tactical cards.
      </p>
      <p>
        <b>
          Your City:
        </b>
         Click or press Enter on it to 
        <b>
          Recruit
        </b>
         units or 
        <b>
          Construct
        </b>
         buildings. Food comes from grassland/forest near your city; Granary doubles food output.
      </p>
      <p>
        <b>
          Buildings:
        </b>
         Each provides a permanent effect — yields, HP, card draw, orders, or vision.
      </p>
      <h3
        class="font-semibold mt-4 text-base"
      >
        Keyboard controls
      </h3>
      <ul
        class="list-disc list-inside space-y-1 text-xs"
      >
        <li>
          <kbd>
            Arrow keys
          </kbd>
           — move the hex cursor
        </li>
        <li>
          <kbd>
            Page Up
          </kbd>
           / 
          <kbd>
            Page Down
          </kbd>
           — diagonal hex moves
        </li>
        <li>
          <kbd>
            Enter
          </kbd>
           or 
          <kbd>
            Space
          </kbd>
           — select / move / attack / open city
        </li>
        <li>
          <kbd>
            Esc
          </kbd>
           — cancel selection or close dialogs
        </li>
        <li>
          <kbd>
            E
          </kbd>
           — end your turn
        </li>
        <li>
          <kbd>
            Tab
          </kbd>
           — jump between map, hand, and toolbar
        </li>
      </ul>
      <p
        class="text-xs text-stone-600 italic mt-2"
      >
        Animations respect your OS reduced-motion preference.
      </p>
    </div>
  </div>
</div>
`;

exports[`component snapshots > PassDeviceModal 1`] = `
<div
  class="fixed inset-0 bg-black/60 flex items-center justify-center z-50"
>
  <div
    aria-labelledby="pass-device-title"
    aria-modal="true"
    class="bg-gradient-to-b from-amber-100 to-amber-50 border-2 border-amber-700 rounded-lg p-5 max-w-md w-full m-4 shadow-2xl focus:outline-none"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between mb-3"
    >
      <h2
        class="text-2xl font-bold"
        id="pass-device-title"
      >
        Pass the device
      </h2>
    </div>
    <div
      class="text-center py-4"
    >
      <div
        aria-hidden="true"
        class="inline-flex items-center justify-center w-20 h-20 rounded-full text-4xl text-white font-bold mb-4"
        style="background: rgb(139, 106, 139);"
      >
        ☠
      </div>
      <div
        class="text-lg text-stone-700 mb-1"
      >
        Next up
      </div>
      <div
        class="text-2xl font-bold mb-0.5"
      >
        Player 2
      </div>
      <div
        class="text-sm text-stone-600 mb-4"
      >
        Leading 
        Grimhold
      </div>
      <p
        class="text-xs text-stone-600 mb-5"
      >
        Hand the device to 
        Player 2
        . Other players' hands, unexplored tiles, and decks are hidden until you tap Ready.
      </p>
      <button
        class="bg-amber-700 hover:bg-amber-800 text-white font-semibold px-6 py-2 rounded shadow focus:outline-none focus-visible:ring-2 focus-visible:ring-amber-500 focus-visible:ring-offset-2"
        type="button"
      >
        I'm ready
      </button>
    </div>
  </div>
</div>
`;

exports[`component snapshots > TurnBanner 1`] = `
<div
  aria-live="polite"
  class="pointer-events-none fixed top-20 left-1/2 -translate-x-1/2 z-40 bg-stone-900/90 text-white rounded-lg shadow-xl px-6 py-3 flex items-center gap-3 "
  role="status"
>
  <span
    aria-hidden="true"
    class="inline-flex items-center justify-center w-10 h-10 rounded-full text-xl font-bold"
    style="background: rgb(214, 184, 118);"
  >
    ♔
  </span>
  <div>
    <div
      class="text-xs uppercase tracking-wider text-stone-300"
    >
      Turn 
      3
    </div>
    <div
      class="font-bold text-lg"
    >
      Aldermere
    </div>
  </div>
</div>
`;

exports[`component snapshots > TutorialOverlay 1`] = `
<div
  class="fixed inset-0 bg-black/60 flex items-center justify-center z-50"
>
  <div
    aria-labelledby="tutorial-title"
    aria-modal="true"
    class="bg-gradient-to-b from-amber-100 to-amber-50 border-2 border-amber-700 rounded-lg p-5 max-w-xl w-full m-4 shadow-2xl focus:outline-none"
    role="dialog"
    tabindex="-1"
  >
    <div
      class="flex items-start justify-between mb-3"
    >
      <h2
        class="text-2xl font-bold"
        id="tutorial-title"
      >
        Welcome to Helmets Clash
      </h2>
      <button
        aria-label="Close dialog"
        class="text-stone-600 hover:text-stone-900 focus:outline-none focus-visible:ring-2 focus-visible:ring-amber-600 focus-visible:ring-offset-1 rounded p-1"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="text-sm text-stone-800 space-y-3"
    >
      <p>
        <b>
          Goal:
        </b>
         Be the last faction with a city standing.
      </p>
      <ol
        class="list-decimal list-inside space-y-1"
      >
        <li>
          Click one of your units (the bright-bordered ones) to select it.
        </li>
        <li>
          Blue hexes show where it can move; red-outlined enemies are in attack range.
        </li>
        <li>
          Click your city to 
          <b>
            Recruit
          </b>
           new units or 
          <b>
            Construct
          </b>
           buildings. Both cost gold + food.
        </li>
        <li>
          Your hand (bottom of screen) holds tactical 
          <b>
            cards
          </b>
          . Spending Orders plays them.
        </li>
        <li>
          When you're done, click 
          <b>
            End Turn
          </b>
           (or press 
          <kbd>
            E
          </kbd>
          ).
        </li>
      </ol>
      <p
        class="text-xs text-stone-600 italic"
      >
        Keyboard: arrows move a cursor, Enter acts, Esc cancels, 
        <kbd>
          ?
        </kbd>
         opens help. Theme and turn-warning settings are behind the gear icon in the toolbar.
      </p>
      <div
        class="text-right pt-2"
      >
        <button
          class="bg-amber-700 hover:bg-amber-800 text-white font-semibold px-5 py-2 rounded shadow focus:outline-none focus-visible:ring-2 focus-visible:ring-amber-500 focus-visible:ring-offset-2"
          type="button"
        >
          Got it
        </button>
      </div>
    </div>
  </div>
</div>
`;
